--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     depends_on:
       - db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/app
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/kafkadb
       - SPRING_DATASOURCE_USERNAME=postgres
       - SPRING_DATASOURCE_PASSWORD=postgres
       - SPRING_JPA_HIBERNATE_DDL_AUTO=update
@@ -18,9 +18,9 @@ services:
           
   db:
     image: 'postgres:13.1-alpine'
-    container_name: db
+    container_name: db-kafka
     environment:
-      - POSTGRES_DB=app
+      - POSTGRES_DB=kafkadb
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
     ports:
