--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
-#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-#spring.datasource.username=${DB_USERNAME}
-#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/kafkadb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+#spring.datasource.url=jdbc:postgresql://localhost:5432/kafkadb?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+#spring.datasource.username=postgres
+#spring.datasource.password=postgres
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
