--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,8 +12,8 @@ spring.jpa.hibernate.show-sql=true
 
 #spring.liquibase.change-log=classpath:db/changelog/changelog.sql
 
-spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
+#spring.datasource.initialization-mode=always
+#spring.datasource.initialize=true
 
 ##4ABCDEF
 #spring.jpa.properties.hibernate.show_sql=true
@@ -27,14 +27,14 @@ server.port=8083
 
 
 
-spring.kafka.consumer.bootstrap-servers: localhost:9092
+spring.kafka.consumer.bootstrap-servers: kafka-service.kafka.svc.cluster.local:9092
 spring.kafka.consumer.group-id: myGroup
 spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
 spring.kafka.consumer.value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=*
 
-spring.kafka.producer.bootstrap-servers: localhost:9092
+spring.kafka.producer.bootstrap-servers: kafka-service.kafka.svc.cluster.local:9092
 spring.kafka.producer.key-serializer: org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
