--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,7 +27,7 @@ server.port=8083
 
 
 
-spring.kafka.consumer.bootstrap-servers: kafka-service.kafka.svc.cluster.local:9092
+spring.kafka.consumer.bootstrap-servers: ${SPRING_KAFKA_HOST}:${SPRING_KAFKA_PORT}
 spring.kafka.consumer.group-id: myGroup
 spring.kafka.consumer.auto-offset-reset: earliest
 spring.kafka.consumer.key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
